chore: minor tweaks to homogenize line endings and fix vs code extension lsit

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "ms-python.python",
     "VisualStudioExptTeam.vscodeintellicode",
     "LittleFoxTeam.vscode-python-test-adapter",
+    "hbenl.vscode-test-explorer",
     "eamodio.gitlens",
     "EditorConfig.EditorConfig",
     "streetsidesoftware.code-spell-checker",
